--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/Bookie.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/Bookie.scss
@@ -596,7 +596,7 @@ footer {
     }
     &__title{
     font-weight: 900;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
     text-transform: uppercase;
     font-size: 30px;
     color: #23211f;
@@ -609,17 +609,14 @@ footer {
     border: none;
     background: none;
     width: 10px;
-    transition: 0.3s;
+    transition: 0.8s;
     &:hover{
       color: #4c00ff;
     }
    }
    &__heart{
     position: relative;
-    @media only screen and (min-width: 768px) {
-    left: 300px;
-    }
-    left: 270px;
+    left: 85%;
     bottom: 25px;
     color: #FF3100;
     cursor: pointer;
