--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Yossi_Yael_Will_Artur/new/gucciNEWyossi/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Yossi_Yael_Will_Artur/new/gucciNEWyossi/style.scss
@@ -756,3 +756,42 @@ body {
         opacity: 1;
     }
 }
+
+#Facebooklogo:hover{
+    color: #165458;
+    cursor: pointer;
+    
+}
+
+#Twitterlogo:hover{
+color: #1da1f2;
+cursor: pointer;
+}
+
+#Instagramlogo:hover{
+    color: #165458;
+    cursor: pointer;
+}
+
+#Youtubelogo:hover{
+  color: #ff0019;
+  cursor: pointer;
+}
+#Podcastlogo:hover{
+cursor: pointer;
+}
+
+#Pinterestlogo:hover{
+    color: #c61f26;
+    cursor: pointer;
+}
+
+#Snapchatlogo:hover{
+color: #f7f400;
+cursor: pointer;
+}
+
+li:hover{
+    color: white;
+    cursor: pointer;
+}
