--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/style.scss
@@ -511,6 +511,7 @@ html{
     flex-direction: column;
     color: #EBEBEB;
     height: 90%;
+    
 
     &-active {
         transition: opacity 1s;
@@ -529,8 +530,7 @@ html{
         @include backgroundsettings();
         width: 100%;
         height: 100%;
-        overflow-x: hidden;
-        overflow-y: scroll;
+        overflow: hidden;
 
         &__opacity {
 
@@ -555,6 +555,7 @@ html{
                 height: 10%;
                 width: 900px;
                 display: flex;
+                
                 justify-content: center;
                 align-items: center;
                 text-align: center;
@@ -744,7 +745,19 @@ html{
             }
 
         }
+
     }
+    
+    .popmenu__box__grid{
+        grid-template-columns: 1fr;
+        
+    }
+    .popmenu__box__opacity__navbar{
+        flex-wrap: wrap;
+    }
+
+
+
 
 }
 
