--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/Bookie.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/Bookie.scss
@@ -164,6 +164,7 @@ header {
   bottom: 100%;
   left: 0;
   width: 100%;
+  height: 100vh;
   display: block;
   z-index: 98;
   background-color: rgba(255, 255, 255, .87);
@@ -176,10 +177,9 @@ header {
 
   h5 {
     position: relative;
-    height: 21px;
-    font-size: 15px;
     text-align: center;
     cursor: pointer;
+    top:20%;
   }
 }
 
