--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/myBookie.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/myBookie.scss
@@ -48,19 +48,26 @@ body {
     flex-direction: column;
     flex-grow: 2;
   }
-  .table {
+  .sorts {
     display: flex;
     flex-direction: column;
     width: 50%;
     padding: 1rem;
     font-size: .5em;
-    table {
-      width: 80%;
-    }
   }
 }
 
 img {
   width: auto;
   height: 15vh;
+}
+
+table{
+  text-align: center;
+  border: 2px solid rgb(200, 200, 200);
+  td,
+th {
+    border: 1px solid rgb(190, 190, 190);
+    padding: 10px;
+}
 }
