--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/style.scss
@@ -290,8 +290,9 @@ body {
   }
 
   &__item {
+    height: fit-content;
     width: 300px;
-    height: 420px;
+    // height: 420px;
     transition: ease 1s;
 
     &:hover {
