--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/myBookie.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/myBookie.scss
@@ -5,7 +5,7 @@
 
 html,
 body {
-  width: 100%;
+  width:clamp(90vw, 80vw, 100vw );
   margin: 0;
   scroll-behavior: smooth;
 }
@@ -18,7 +18,7 @@ body {
 .wrapper {
   margin: 0;
   padding: 0;
-  width: clamp(80vw, 90vw, 100vw);
+  width:80vw;
   height: 90vh;
   position: absolute;
   display: flex;
@@ -42,7 +42,7 @@ body {
     justify-content: space-between;
   }
   form {
-    width: 40%;
+    width: fit-content;
     gap: 3vh;
     display: flex;
     flex-direction: column;
@@ -51,9 +51,9 @@ body {
   .sorts {
     display: flex;
     flex-direction: column;
-    width: 50%;
+    width: 100%;
     padding: 1rem;
-    font-size: .5em;
+    font-size: 0.5em;
   }
 }
 
@@ -62,12 +62,26 @@ img {
   height: 15vh;
 }
 
-table{
+table {
+  font-size: clamp(1em, 2.5vw, 2em); 
   text-align: center;
   border: 2px solid rgb(200, 200, 200);
+  width: 100%;
   td,
-th {
+  th {
     border: 1px solid rgb(190, 190, 190);
     padding: 10px;
+  }
+  [data-update]{
+    display: flex;
+    flex-direction: column;
+  }
+  a{
+    font-size: clamp(.5em, 1.25vw, 1em);
+  }
+  
 }
+
+legend{
+  font-size:clamp(.5em, 1.25vw, 1em);
 }
