--- a/תרגול/אתגר/shani/style.scss
+++ b/תרגול/אתגר/shani/style.scss
@@ -41,13 +41,13 @@ input {
 
 // }
 
-.clickGreen{
-    display:none;
-}
-.clickRed{
-    display:none;
-}
-.clickBlue{
-    display:none;
-}
+// .clickGreen{
+//     display:none;
+// }
+// .clickRed{
+//     display:none;
+// }
+// .clickBlue{
+//     display:none;
+// }
 
