--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/style.scss
@@ -148,6 +148,57 @@ body {
     }
 }
 
+.scene {
+    .carousel {
+        --main-angle-deg: 72deg;
+        --main-pic-width: 60vw;
+        margin-block: 100px;
+        perspective: 1000px;
+        // perspective-origin: 50% 50%;
+        width: 100vw;
+        position: relative;
+        height: 55vw;
+        animation: rotate linear infinite 20s;
+        transform-style: preserve-3d ;
+
+        img {
+            width: 100%;
+            position: absolute;
+            // transform: translateZ(68.57142857vw);
+        }
+
+        #pic1 {
+            transform: rotateY(calc(var(--main-angle-deg)*1)) translateZ(68.57142857vw);
+        }
+
+        #pic2 {
+            transform: rotateY(calc(var(--main-angle-deg)*2)) translateZ(68.57142857vw);
+        }
+
+        #pic3 {
+            transform: rotateY(calc(var(--main-angle-deg)*3)) translateZ(68.57142857vw);
+        }
+
+        #pic4 {
+            transform: rotateY(calc(var(--main-angle-deg)*4)) translateZ(68.57142857vw);
+        }
+
+        #pic5 {
+            transform: rotateY(calc(var(--main-angle-deg)*5)) translateZ(68.57142857vw);
+        }
+    }
+}
+
+@keyframes rotate {
+    from {
+        transform: rotateY(0deg);
+    }
+
+    to {
+        transform: rotateY(360deg);
+    }
+}
+
 .filter-bar {
     display: flex;
     justify-content: center;
@@ -277,6 +328,7 @@ body {
 
 .cart {
     height: fit-content;
+
     .cart__card {
         background-color: rgb(210, 210, 211);
         border-radius: 10px;
@@ -288,7 +340,8 @@ body {
         align-items: center;
         width: 400px;
         padding: 5px;
-        p{
+
+        p {
             color: black;
         }
     }
@@ -324,13 +377,15 @@ body {
         color: rgb(238, 238, 238);
 
     }
-    &__total{
+
+    &__total {
         display: flex;
         justify-content: space-around;
         align-items: center;
         font-size: 1.2rem;
 
     }
+
     img {
         border-radius: 40px;
     }
@@ -350,7 +405,8 @@ body {
         pointer-events: all;
     }
 }
-#footer{
+
+#footer {
     width: 100vw;
     height: 50px;
     position: fixed;
@@ -360,7 +416,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    a{
+
+    a {
         color: white;
         text-decoration: none;
     }
@@ -386,7 +443,7 @@ body {
             height: auto;
         }
 
-        >*{
+        >* {
             margin: 10px;
             height: 40px;
         }
@@ -408,5 +465,3 @@ body {
 .visableForm {
     transform: translateY(0px);
 }
-
-
