--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/style.scss
@@ -15,7 +15,8 @@ body {
     background-color: var(--main-color-light-gray3);
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    height: 200vh;
+    // height: 200vh;
+    // 
 }
 
 // div{
@@ -149,44 +150,58 @@ body {
 }
 
 .scene {
+    position: absolute;
+    z-index: -20;
+    width: 100vw;
+    top: 200px;
+    left: 0%;
+    --main-angle-deg: 72deg;
+    --main-pic-width: 60vw;
+    display: flex;
+    justify-content: center;
+    perspective: calc(var(--main-pic-width)*0.68);
+    perspective-origin: 50% 60%;
+    // border: 1px solid red;
+    overflow: hidden;
+    height: 800px;
+
     .carousel {
-        --main-angle-deg: 72deg;
-        --main-pic-width: 60vw;
-        margin-block: 100px;
-        perspective: 1000px;
-        // perspective-origin: 50% 50%;
-        width: 100vw;
+        width: var(--main-pic-width);
         position: relative;
-        height: 55vw;
-        animation: rotate linear infinite 20s;
-        transform-style: preserve-3d ;
+        height: calc(var(--main-pic-width)*0.2);
+        transform-style: preserve-3d;
 
         img {
             width: 100%;
             position: absolute;
-            // transform: translateZ(68.57142857vw);
+            box-shadow: 0px 0px 200px 1px black;
+            // opacity: 0.5;
+            
         }
 
         #pic1 {
-            transform: rotateY(calc(var(--main-angle-deg)*1)) translateZ(68.57142857vw);
+            transform: rotateY(calc(var(--main-angle-deg)*1)) translateZ(calc(var(--main-pic-width) / 1.45308505601));
         }
 
         #pic2 {
-            transform: rotateY(calc(var(--main-angle-deg)*2)) translateZ(68.57142857vw);
+            transform: rotateY(calc(var(--main-angle-deg)*2)) translateZ(calc(var(--main-pic-width) / 1.45308505601));
         }
 
         #pic3 {
-            transform: rotateY(calc(var(--main-angle-deg)*3)) translateZ(68.57142857vw);
+            transform: rotateY(calc(var(--main-angle-deg)*3)) translateZ(calc(var(--main-pic-width) / 1.45308505601));
         }
 
         #pic4 {
-            transform: rotateY(calc(var(--main-angle-deg)*4)) translateZ(68.57142857vw);
+            transform: rotateY(calc(var(--main-angle-deg)*4)) translateZ(calc(var(--main-pic-width) / 1.45308505601));
         }
 
         #pic5 {
-            transform: rotateY(calc(var(--main-angle-deg)*5)) translateZ(68.57142857vw);
+            transform: rotateY(calc(var(--main-angle-deg)*5)) translateZ(calc(var(--main-pic-width) / 1.45308505601));
         }
     }
+}
+.rotate{
+    animation: rotate linear infinite 60s;
 }
 
 @keyframes rotate {
@@ -206,6 +221,8 @@ body {
     margin-block: 10px;
     padding-block: 20px;
     background-color: var(--main-color-light-gray2);
+    transform: translateZ(1px);
+    // border: 1px solid blue;
 
     &__item {
         margin-inline: 20px;
@@ -280,6 +297,7 @@ body {
         margin: 15px;
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         font-size: 3rem;
+        text-shadow: 2px 2px 5px black, 2px 2px 10px black, 2px 2px 15px black;
     }
 
     &__card {
@@ -289,6 +307,7 @@ body {
         background-color: var(--card-color);
         width: 250px;
         border-radius: 20px;
+        border: 3px solid #161811;
         margin: 20px;
         padding-block: 10px;
 
