--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/style.scss
@@ -15,7 +15,8 @@ body {
     background-color: var(--main-color-light-gray3);
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    // height: 200vh;
+    min-height: 200vh;
+    max-height: 250vh;
     // 
 }
 
@@ -136,7 +137,10 @@ body {
         }
     }
 }
-
+#banner{
+    width: 100vw;
+    margin-left:-10px;
+}
 .nav-bar {
     display: flex;
     justify-content: center;
@@ -153,7 +157,7 @@ body {
     position: absolute;
     z-index: -20;
     width: 100vw;
-    top: 200px;
+    top: 90vw;
     left: 0%;
     --main-angle-deg: 72deg;
     --main-pic-width: 60vw;
@@ -162,8 +166,8 @@ body {
     perspective: calc(var(--main-pic-width)*0.68);
     perspective-origin: 50% 60%;
     // border: 1px solid red;
-    overflow: hidden;
-    height: 800px;
+    // overflow: hidden;
+    // height: 100vw;
 
     .carousel {
         width: var(--main-pic-width);
@@ -175,7 +179,7 @@ body {
             width: 100%;
             position: absolute;
             box-shadow: 0px 0px 200px 1px black;
-            // opacity: 0.5;
+            opacity: 0.8;
             
         }
 
@@ -201,7 +205,7 @@ body {
     }
 }
 .rotate{
-    animation: rotate linear infinite 60s;
+    animation: rotate linear infinite 120s;
 }
 
 @keyframes rotate {
