--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/chaim , michael ido/taskFilter.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/chaim , michael ido/taskFilter.scss
@@ -140,7 +140,7 @@
             display: flex;
             flex-direction: row;
             column-gap: 3px;
-            overflow: auto;
+            overflow-x: auto;
             white-space: nowrap;
 
             &-card {
@@ -162,7 +162,7 @@
 
                 &-head {
                     color: chocolate;
-                    font-size: 12px;
+                    font-size: 15px;
                     font-weight: 1000;
                 }
 
@@ -196,9 +196,9 @@
 // Customer page -----------------------
 
 .container {
-    max-width: 100%;
+    width: 100%;
     height: 2100px;
-    // margin: 0;
+    max-height: fit-content;
     background: linear-gradient(rgb(157, 241, 157),
             transparent),
         linear-gradient(90deg,
@@ -210,7 +210,6 @@
     background-blend-mode: screen;
 
     &_header {
-        // background-color:rgb(46 , 127 , 141);
         display: grid;
         grid-template-columns: repeat(12, 1fr);
         grid-template-rows: repeat(5, 1fr);
@@ -228,7 +227,7 @@
             grid-row: 1/4;
             grid-column: 1/2;
             height: 10vh;
-            margin-top: -1vh;
+            // margin-top: -1vh;    
         }
 
         &-search {
@@ -268,8 +267,8 @@
         }
 
         &-dropDown {
-            grid-column: 7/13;
-            grid-row: 2;
+            grid-column: 9/13;
+            grid-row: 2/3;
             height: 20vh;
             display: grid;
             grid-template-columns: repeat(4, 25%);
@@ -277,54 +276,103 @@
             &-box {
                 display: flex;
                 flex-direction: column;
-                
+                text-align: center;
+                // border-radius: 15px;
+
                 &-item {
                     width: 100%;
-                    height: 35%;
+                    height: 40%;
+                    display: grid;
+                    grid-template-columns: repeat(4, 25%);
+                    grid-template-rows: repeat(4, 25%);
                     border-bottom: 1px solid rgb(86, 86, 224);
                     background-color: rgb(212, 211, 201);
+
+                    &-header {
+                        grid-row: 1;
+                        grid-column: 2/4;
+                        font-size: 13px;
+                        font-weight: 1000;
+                        text-align: center;
+                    }
+
+                    &-size {
+                        text-align: start;
+                        grid-row: 2;
+                        font-weight: 1000;
+                        font-size: 11px;
+                    }
+
+                    &-price {
+                        text-align: start;
+                        grid-row: 3;
+                        grid-column: 1/2;
+                        font-weight: 1000;
+                        font-size: 11px;
+                    }
+
+                    &-deleteBtn {
+                        grid-row: 3/5;
+                        grid-column: 4/5;
+                        height: 100%;
+                        font-size: 10px;
+                        border-radius: 10px;
+                        background-color: antiquewhite;
+                    }
                 }
                 &-signInInput {
-                    box-shadow: rgba(97, 88, 6, 0.85) 0px 30px 60px -12px inset, rgba(85, 216, 96, 0.5) 0px 18px 36px -30px inset;
+                    box-shadow: rgba(112, 134, 233, 0.35) 0px 30px 60px -12px inset, rgba(59, 101, 163, 0.5) 0px 18px 36px -30px inset;
                     border-radius: 5px;
-                    height: 15%;
-                    width: 95%;
+                    height: 10%;
+                    width: 70%;
+                    align-self: center;
 
-                    &::placeholder{
+                    &::placeholder {
                         color: black;
-                        font-weight: 400;
-                        font-size: 14px;
+                        font-weight: 700;
+                        font-size: 10px;
                     }
 
-                    &-btn{
+                    &-btn {
                         color: #34333b;
-                        background-color: rgb(168, 91, 187);
+                        background-color: rgb(61, 207, 86);
                         box-shadow: none;
-                        width: 95%;
+                        width: 75%;
                         border-radius: 5px;
-
+                        align-self: center;
+                        height: 2.5vh;
+                        font-size: 10px;
                     }
                 }
             }
-            .notifications{
+
+            .notifications {
+                box-shadow: rgba(235, 155, 179, 0.35) 0px 30px 60px -12px inset, rgba(163, 77, 81, 0.5) 0px 18px 36px -30px inset;
                 grid-column: 1/2;
-                width: 150%;
                 border-radius: 15px;
-                opacity: 0.7;
+                opacity: 0.8;
             }
-            .signIn{
+
+            .signIn {
                 grid-column: 2/3;
                 row-gap: 5px;
+
             }
-            .yourOrders{
+
+            .yourOrders {
                 grid-column: 3/4;
+                box-shadow: rgba(70, 97, 218, 0.35) 0px 30px 60px -12px inset, rgba(59, 101, 163, 0.5) 0px 18px 36px -30px inset;
             }
-            .shoppingCart{
-                grid-column: 4/5;
+
+            .shoppingCart {
+                grid-column: 3/5;
+                height: 80%;
+                width: 100%;
                 display: flex;
                 flex-direction: column;
-                overflow-y: auto;
+                overflow: auto;
                 white-space: nowrap;
+                box-shadow: rgba(53, 146, 118, 0.35) 0px 30px 60px -12px inset, rgba(183, 194, 211, 0.5) 0px 18px 36px -30px inset;
             }
         }
     }
@@ -339,6 +387,7 @@
         height: 25%;
         margin-top: 10px;
     }
+
     &_catagories {
         display: flex;
         justify-content: space-around;
@@ -355,15 +404,13 @@
             background-size: contain;
             background-repeat: no-repeat;
 
-            // &:hover {
-            //     transform: scale(1.2);
-            // }
-
+           
             &-form {
                 border: 3px solid red;
 
             }
         }
+
         &-display {
             width: 100%;
             height: 20%;
@@ -378,13 +425,13 @@
             &-card {
                 border-bottom: 5px solid rgb(0, 0, 0);
                 box-sizing: content-box;
-                box-shadow: rgba(110, 111, 112, 0.55) 0px 30px 60px 80px inset, rgba(12, 24, 94, 0.75) 0px 18px 36px 30px inset;
+                box-shadow: rgba(110, 112, 110, 0.55) 0px 30px 60px 80px inset, rgba(69, 202, 28, 0.75) 0px 18px 36px 30px inset;
                 height: 100%;
                 width: 100%;
                 display: grid;
                 grid-template-columns: repeat(2, 50%);
 
-                &-btn{
+                &-btn {
                     width: 50%;
                     box-shadow: rgba(92, 92, 184, 0.25) 0px 30px 60px -12px inset, rgba(49, 141, 46, 0.8) 0px 18px 36px -18px inset;
                 }
@@ -441,11 +488,10 @@
                 width: 100%;
                 height: 7vh;
 
-
                 &-filterInput {
                     box-shadow: rgba(6, 61, 97, 0.85) 0px 30px 60px -12px inset, rgba(16, 63, 85, 0.5) 0px 18px 36px -30px inset;
-                    height: 3vh;
-                    width: 60%;
+                    height: 2vh;
+                    width: 35%;
                     color: rgb(240, 232, 218);
                     font-size: 15px;
                     border-radius: 5px;
@@ -463,6 +509,7 @@
                     box-shadow: rgba(33, 13, 87, 0.75) 0px 54px 55px, rgba(32, 161, 101, 0.72) 0px -12px 30px,
                         rgba(53, 100, 187, 0.82) 0px 4px 6px, rgba(101, 42, 136, 0.77) 0px 12px 13px, rgba(52, 88, 136, 0.99) 0px -3px 5px;
                     background-color: rgb(107, 68, 46);
+                    justify-self: center;
                 }
             }
         }
@@ -470,7 +517,7 @@
 
     &-select {
         border-radius: 15%;
-        font-size: 12px;
+        font-size: 15px;
         font-weight: bold;
         box-shadow: rgba(40, 40, 41, 0.85) 0px 30px 60px -12px inset, rgba(25, 34, 153, 0.8) 0px 18px 36px 30px inset;
         height: 4vh;
@@ -483,36 +530,38 @@
         margin: auto;
 
         &-options {
-            font-size: 12px;
             display: inline-block;
             font-family: 'Times New Roman', Times, serif;
         }
     }
 
     &-shoppingCart {
+        margin-top: 20px;
         width: 100%;
-        // border: 3px solid red;
-        height: 30vh;
-       
+        height: 60vh;
+        display: none;
+        grid-template-columns: repeat(5, 20%);
+        grid-template-rows: repeat(10, 10%);
 
         &_display {
-            height: 100%;
-            border: 3px solid black;
-            width: 50%;
-            display: none;
+            border: 1px solid rgb(117, 115, 115);
+            grid-column: 2/5;
+            grid-row: 2/7;
+            display: flex;
             flex-direction: column;
             overflow-y: scroll;
             white-space: nowrap;
-           
+
             &-item {
                 height: 35%;
                 border-bottom: 1px solid black;
+                justify-self: auto;
                 display: grid;
                 grid-template-columns: repeat(10, 1fr);
                 grid-template-rows: repeat(10, 1fr);
 
                 &-header {
-                    font-size: 12px;
+                    font-size: 20px;
                     text-align: center;
                     grid-column: 1/11;
                     grid-row: 1/3;
@@ -520,17 +569,17 @@
                 }
 
                 &-size {
-                    font-size: 10px;
+                    font-size: 17px;
                     grid-column: 1/4;
-                    grid-row: 2/5;
+                    grid-row: 1/4;
                     font-weight: 1000;
                 }
 
                 &-price {
-                    font-size: 10px;
+                    font-size: 15px;
                     font-weight: 1000;
                     grid-column: 1/4;
-                    grid-row: 6/8;
+                    grid-row: 4/6;
                 }
 
                 &-deleteBtn {
@@ -541,6 +590,15 @@
                     color: blue;
                 }
             }
+        }
+
+        &-orderAndTotal {
+            // border: 3px solid black;
+            grid-row: 8/9;
+            grid-column: 3;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
         }
     }
 
