--- a/02-JavaScript/08-forms/MichZap/index.scss
+++ b/02-JavaScript/08-forms/MichZap/index.scss
@@ -4,6 +4,8 @@ form.form1{
 }
 
 #rootItems{
+    width: 35vw;
+    height: auto;
     position: absolute;
     margin-left: 30vw;
     background-color: lightseagreen;
