--- a/תרגול/08.02.22/noa/style.scss
+++ b/תרגול/08.02.22/noa/style.scss
@@ -32,9 +32,9 @@ form {
 
         &[type="checkbox"] {
             box-shadow: none;
-           margin-right: 0px;
-           margin-left: 25px;
-           width: 40%;
+            margin-right: 0px;
+            margin-left: 15px;
+
         }
 
     }
@@ -47,7 +47,7 @@ form {
     .radio {
         width: 100%;
         display: grid;
-        grid-template-columns: 10% 80%;
+        grid-template-columns: 10% 90%;
         margin: 5px;
 
         #Amount {
@@ -70,16 +70,21 @@ form {
     .checkbox {
 
         display: grid;
-        grid-template-columns: 10% 90%;
+        grid-template-columns: 15% 80%;
         margin: 5px;
         display: none;
 
         .tax {
             display: none;
-            // grid-column: 1/3;
+            grid-column: 1/3;
             // display: flex;
-            // margin-left: 20px;
-            // margin-top: 10px;
+            margin: 7px;
+            margin-left: 35px;
+
+            .tax1 {
+                width: 15%;
+
+            }
 
         }
     }
