--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/style.scss
@@ -345,7 +345,7 @@ $background-color:#ffffff;
     .imgBottom {
       display: none;
       position: absolute;
-      top: 65px;
+      // top: 65px;
       left: 2px;
       z-index: 1;
 
