--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/style.scss
@@ -40,9 +40,7 @@ body {
       }
     }
 
-    &:hover {
-      background-color: #141010de;
-    }
+    
   }
 
 
@@ -51,10 +49,7 @@ body {
     text-align: center;
     transition: all 0.5s;
 
-    &:hover {
-      background-color: #141010de;
-    }
-
+   
 
 
 
@@ -65,6 +60,7 @@ body {
     ul {
       display: inline-flex;
       list-style: none;
+      
 
 
 
@@ -77,6 +73,7 @@ body {
         width: 120px;
         margin: 15px;
         padding: 15px;
+        
 
 
         a {
@@ -84,6 +81,7 @@ body {
           color: #ffffff;
           font-family: "Montserrat", sans-serif;
           font-weight: 900;
+          
 
 
 
@@ -128,6 +126,7 @@ body {
           :hover {
             text-decoration: underline;
             cursor: pointer;
+            
 
 
           }
@@ -196,8 +195,9 @@ body {
 .container__navBar2 ul li:hover .container__navBar2__dropdown {
   display: block;
   margin-top: 15px;
-  margin-left: -15px;
-  position: absolute;
+  //margin-left: -15px;
+  //position: absolute;
+  border:solid black 2px;
 
   transform: translateY(-20px);
   ;
