--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/style.scss
@@ -300,17 +300,17 @@ body {
 
     }
 
-    .fa-heart {
-      position: absolute;
-      right: 0;
-      top: 0;
-      z-index: 8;
-      margin: 10px;
+    // .fa-cart-circle-plus {
+    //   position: absolute;
+    //   right: 0;
+    //   top: 0;
+    //   z-index: 8;
+    //   margin: 10px;
 
-      &:active {
-        background-color: red;
-      }
-    }
+    //   &:active {
+    //     background-color: red;
+    //   }
+    // }
 
 
     .picture {
