--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/style.scss
@@ -809,34 +809,40 @@ html {
 
 // ///////////////////////////// Cart///////////////////////////////////
 
-.cartIcon {
+
+
+.cart{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    position: absolute;
+    top: 3%;
+    right: 5%;
+}
+.cart__box {
+
     width: 50px;
     height: 50px;
-    border-radius: 20%;
+    border-radius: 8%;
     background-color: #EBEBEB;
-    position: fixed;
-    right: 8%;
-    top: 5.5%;
     cursor: pointer;
-}
+    color: white;
+    z-index: 7;
 
-.cart {
-    position: fixed;
-    // opacity: 0;
-    width: 250px;
-    height: 400px;
-    background-color:#EBEBEB;
-    top: 12%;
-    right: 3%;
-    border-radius:10px;
-    padding: 5px;
-
-
+    &-active{
+        width: 250px;
+        height: 400px;
+    }
 
 }
 
-
-
+.cart__close{
+    font-size: 20px;
+    color: red;
+    cursor: pointer;
+    opacity: 0;
+}
 
 
 
