--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/marinaERP/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/marinaERP/style.scss
@@ -164,7 +164,7 @@
 
 // STORE
 .header {
-  // position: fixed;
+  padding-right: 5em;
   width: 100%;
   display: flex;
   align-items: center;
@@ -174,7 +174,7 @@
   box-shadow: 12px 12px 12px rgba(23, 16, 37, 0.4);
   border-radius: 8px;
   margin-bottom: 6px;
-  // z-index: 1;
+  
 
   &__ImgLogo {
     display: inline-flex;
@@ -210,7 +210,8 @@
       color: rgb(129, 126, 126);
       font-size: 26px;
       text-decoration: none;
-      margin-left: 1em;
+      margin-left: 1.5em;
+     
       
       :hover {
         cursor: pointer;
@@ -219,8 +220,9 @@
     }
 
     ul {
-      display: flex;
-      gap: 4em;
+      // display: flex;
+      display: inline-flex;
+      gap: 5em;
 
       li {
         :hover {
@@ -229,10 +231,10 @@
         }
       }
 
-      a {
+      a, li {
         text-decoration: none;
         color: rgb(129, 126, 126);
-        font-size: 1.2em;
+        font-size: 1.1em;
       }
 
       
